-- Version 2.21.2, released ...

 * Bug fix: remove duplicate layers when loading .world files

-- Version 2.21.1, released 21-8-2023

 * Bug fix: make heightmap preview and tile selection work again
 * Bug fix: make selecting variations of biomes work again

-- Version 2.21.0, released 20-8-2023

 * Support for Minecraft 1.20 has been added, including:
   + Preview support for the new blocks by upgrading the embedded Dynmap to version 3.6
   + New plants for the Custom Plants layer: cherry saplings, pink petals, pitcher pods and plants and torchflower seeds and plants
   + The new Cherry Grove biome
   + Suspicious sand and gravel are Imported as sand and gravel, and are preserved on Merge
 * Custom Biomes can now also have custom patterns configured for rendering
   + To create or edit a pattern, click on the [...] button next to the Paint label on the Configure Custom Biome screen
   + Note that for Custom Biomes the opacity cannot be changed
 * Fence blocks and other connecting blocks (such as iron bars and glass panes) from old Custom Objects, from Minecraft versions that automatically managed those connections, will now be automatically connected to their neighbours on Export
   + This is only done for .bo2, .bo3 and .schematic objects
 * Structures (.nbt files) now always have their offset guesstimated when loading them as Custom Objects, since they do not store an offset. This will increase the chance that they will be placed correctly by default
 * Some biomes have received a slightly more distinctive pattern and/or colour
 * Bug fix: fix an error that occurred when Importing Minecraft 1.12 maps with custom biomes
 * Bug fix: creating a new Custom Layer from a renamed palette now adds it to the right palette

-- Version 2.20.0, released 13-8-2023

 * All custom layer types can now be rendered with custom patterns in addition to solid colours
   + To create or edit a pattern, click on the [...] button next to the Paint label on the layer's settings screen