@@ -1,5 +1,6 @@
 -- Version 2.21.2, released ...
 
+ * Make it slightly easier again to pick a solid colour for custom layers
  * Bug fix: remove duplicate layers when loading .world files
 
 -- Version 2.21.1, released 21-8-2023
